cluster-workloads/media/plex/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.s.chaosengine.net`)
      services:
        - name: plex
          port: 32400
  tls: {}
